# miguelg719_home-assistant-mcp

./: .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  client.py  client_test.py  pyproject.toml  server_test.py  start_server.sh  tcp_client_test.py  tcp_server_test.py
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
src/home_assistant_mcp/: server.py
src/home_assistant_mcp/models/: alarm_control_panel.py  humidifier.py
src/home_assistant_mcp/services/: _base.py  alarm_control_panel.py  climate.py  humidifier.py  lock.py
src/home_assistant_server/: server.py
src/home_assistant_server/models/: climate.py  entity.py  light.py  lock.py
src/home_assistant_server/services/: alarm_control_panel.py  climate.py  light.py
tests/: test-integration-server.py  test-server.py
